bugfix: broke filters alignment on changelist.

--- a/thadminjones/static/thadminjones/css/thadminjones.css
+++ b/thadminjones/static/thadminjones/css/thadminjones.css
@@ -62,7 +62,6 @@
 label {
     cursor: pointer;
     vertical-align: middle;
-    white-space: pre-wrap;
 }
 
 a:link, a:visited {
